start on forms for logging in.

--- a/webui/website/templates/home.html
+++ b/webui/website/templates/home.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
-
 {% block content%}
 <h1>This is the Home Page</h1>
+
+# Water is on now! Indicator
+<br />
+# Plot of Water Presure over time
+<br />
+# Histogram of water pressure vs time of day
+<br />
 {% endblock %}
