--- a/webui/website/templates/register.html
+++ b/webui/website/templates/register.html
@@ -1,6 +1,59 @@
 {% extends "base.html" %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register Page{% endblock %}
 {% block content%}
-<h1>This is the Register Page</h1>
+<!-- {% if boolean %}
+It was True!
+{% else %}
+It was not true!
+{% endif %} -->
+
+<form method="post">
+  <h3 align="center">Registration</h3>
+  <div class="form-group">
+    <label for="email">Email Address:</label>
+    <input 
+      type="email" 
+      class="form-control" 
+      name="email" 
+      id="email" 
+      placeholder="Enter Email Address"
+    />
+  </div>
+  <br />
+  <div class="form-group">
+    <label for="name">Name:</label>
+    <input 
+      type="text" 
+      class="form-control" 
+      name="name" 
+      id="name" 
+      placeholder="Enter Your Name"
+    />
+  </div>
+  <br />
+  <div class="form-group">
+    <label for="password1">Password:</label>
+    <input 
+      type="password" 
+      class="form-control" 
+      name="password1" 
+      id="password1" 
+      placeholder="Password"
+    />
+  </div><br />
+  <div class="form-group">
+    <label for="password2">Confirm Password:</label>
+    <input 
+      type="password" 
+      class="form-control" 
+      name="password2" 
+      id="password2" 
+      placeholder="Confirm Password"
+    />
+  </div>
+  <br /><br />
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
 {% endblock %}
