remove centering from page headers

--- a/webui/website/templates/login.html
+++ b/webui/website/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login Page{% endblock %}
 {% block content%}
 <form method="post">
-  <h3 align="center">Login</h3>
+  <h3>Login</h3>
   <div class="form-group">
     <label for="email">Email Address:</label>
     <input 
