--- a/webui/website/templates/register.html
+++ b/webui/website/templates/register.html
@@ -9,7 +9,7 @@ It was not true!
 {% endif %} -->
 
 <form method="post">
-  <h3 align="center">Registration</h3>
+  <h3>Registration</h3>
   <div class="form-group">
     <label for="email">Email Address:</label>
     <input 
