adding placeholder outlining for the home page

--- a/webui/website/templates/home.html
+++ b/webui/website/templates/home.html
@@ -4,6 +4,8 @@
 
 # Water is on now! Indicator
 <br />
+# Current Reading
+<br />
 # Plot of Water Presure over time
 <br />
 # Histogram of water pressure vs time of day
