--- a/webui/website/templates/home.html
+++ b/webui/website/templates/home.html
@@ -1,20 +1,18 @@
 {% extends "base.html" %}
+
 {% block content%}
 <div>
-{% if on_now %}
-<h1>Water is <span class="badge bg-success">Available!</span></h1>
-<!-- <button type="button" class="btn btn-success .text-nowrap">Water is available!</button> -->
-{% else %}
-<h1>Water is <span class="badge bg-danger">Not Available</span></h1>
-<!-- <button type="button" class="btn btn-danger .text-nowrap">Water is not available.</button> -->
-{% endif %}
+	<h1>Water is
+		<span {% if on_now %} class="badge bg-success">Available! {% else %} class="badge bg-danger">Not Available{% endif %}</span>
+	</h1>
 </div>
 <br />
 <h3>Current Reading:</h3>
 <div>{{current_pressure}} psi</div>
 <br />
-# Plot of Water Presure over time
+<!-- # TODO - Plot of Water Presure over time -->
+<iframe src="/chart1" frameborder="0" style="width:100%; height:500px;overflow:auto;"></iframe>
 <br />
-# Histogram of water pressure vs time of day
+<!-- # TODO - Histogram of water pressure vs time of day -->
 <br />
 {% endblock %}
