--- a/webhost_app/website/templates/register.html.j2
+++ b/webhost_app/website/templates/register.html.j2
@@ -1,54 +1,49 @@
-{% extends "base.html" %}
+{% extends "base.html.j2" %}
 
 {% block title %}Register Page{% endblock %}
 {% block content%}
-<!-- {% if boolean %}
-It was True!
-{% else %}
-It was not true!
-{% endif %} -->
 
 <form method="post">
   <h3>Registration</h3>
   <div class="form-group">
     <label for="email">Email Address:</label>
-    <input 
-      type="email" 
-      class="form-control" 
-      name="email" 
-      id="email" 
+    <input
+      type="email"
+      class="form-control"
+      name="email"
+      id="email"
       placeholder="Enter Email Address"
     />
   </div>
   <br />
   <div class="form-group">
     <label for="name">Name:</label>
-    <input 
-      type="text" 
-      class="form-control" 
-      name="name" 
-      id="name" 
+    <input
+      type="text"
+      class="form-control"
+      name="name"
+      id="name"
       placeholder="Enter Your Name"
     />
   </div>
   <br />
   <div class="form-group">
     <label for="password1">Password:</label>
-    <input 
-      type="password" 
-      class="form-control" 
-      name="password1" 
-      id="password1" 
+    <input
+      type="password"
+      class="form-control"
+      name="password1"
+      id="password1"
       placeholder="Password"
     />
   </div><br />
   <div class="form-group">
     <label for="password2">Confirm Password:</label>
-    <input 
-      type="password" 
-      class="form-control" 
-      name="password2" 
-      id="password2" 
+    <input
+      type="password"
+      class="form-control"
+      name="password2"
+      id="password2"
       placeholder="Confirm Password"
     />
   </div>
