--- a/webhost_app/website/templates/admin.html.j2
+++ b/webhost_app/website/templates/admin.html.j2
@@ -25,7 +25,7 @@
 			class="form-control"
 			name="manualPressure"
 			id="manualPressure"
-			placeholder="..."
+			placeholder="Enter manually read pressure."
 		/>
 	</div>
 	<br />
