--- a/webhost_app/website/templates/home.html.j2
+++ b/webhost_app/website/templates/home.html.j2
@@ -1,9 +1,7 @@
 {% extends "base.html.j2" %}
 
 {% block content%}
-	<h1>Strom Park Reclaimed Water Info</h1>
-	<hr />
-	<div>
+	<div class="container">
 		<div class="pt-3">
 			<h2>Water is
 				<span {% if on_now %} class="badge bg-success">Available! {% else %} class="badge bg-danger">Not Available{% endif %}</span>
@@ -11,14 +9,18 @@
 		</div>
 		<br />
 		<div>
-			<h3>Current Reading (within last 15 minutes):</h3>
+			<h3>Current Pressure (within last 15 minutes):</h3>
 			<h2>{{current_pressure}} psi</h2>
-			<small class="text-muted">{{reading.timestamp}}</small>
+			<small class="text-muted">{{reading.timestamp}} UTC</small>
+		</div>
+	</div>
+	<div class="wrapper">
+		<div class="card">
+			{{plotData}}
 		</div>
 	</div>
 <!-- # TODO - Plot of Water Presure over time -->
 <!-- <iframe src="/chart1" frameborder="0" style="width:100%; height:500px;overflow:auto;"></iframe> -->
-<br />
 <!-- # TODO - Histogram of water pressure vs time of day -->
-<br />
+
 {% endblock %}
