--- a/webhost_app/website/templates/base.html.j2
+++ b/webhost_app/website/templates/base.html.j2
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous">
-    <title>{% block title %}Strom Park Reclaimed Water Info{% endblock %}</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">Reclaimed Water Availability</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/">Home</a>
-            {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="/admin">Admin</a>
-            {% endif %}
-            <a class="nav-item nav-link" href="/about">About</a>
-            {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="/logout">Logout</a>
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    </nav>
-    <br />
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      <!-- {% if messages %} -->
-        {% for category, message in messages %}
-          {% if category == 'error' %}
-            <div class="alert alert-danger alter-dismissable fade show" role="alert">
-              {{message}}
-            </div>
-          {% else %}
-            <div class="alert alert-success alter-dismissable fade show" role="alert">
-              {{message}}
-            </div>
-          {% endif %}
-        {% endfor %}
-      <!-- {% endif %} -->
-    {% endwith %}
-    <div class="container">
-      {% block content %}
-      {% endblock %}
-      {% block admin%}
-      {% endblock %}
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous">
-    </script>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link
+			rel="shortcut icon"
+			href="{{ url_for('static', filename='favicon.ico') }}">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous">
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
+		<link
+			rel="stylesheet"
+			href="{{ url_for('static', filename='style.css') }}">
+		<script
+			src="https://cdn.plot.ly/plotly-latest.min.js">
+		</script>
+		<title>{% block title %}Strom Park Reclaimed Water Info{% endblock %}</title>
+	</head>
+	<body>
+	<div class="header">
+		<p class="header-emoji">💧</p>
+		<h1 class="header-title">Strom Park Irrigation Water Pressure</h1>
+		<p class="header-description">Analysis of reclaimed irrigation water availability in the Strom Park community.</p>
+	</div>
+		{# <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/">Reclaimed Water Availability</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav">
+						<a class="nav-item nav-link" href="/">Home</a>
+						{% if user.is_authenticated %}
+						<a class="nav-item nav-link" href="/admin">Admin</a>
+						{% endif %}
+						<a class="nav-item nav-link" href="/about">About</a>
+						{% if user.is_authenticated %}
+						<a class="nav-item nav-link" href="/logout">Logout</a>
+						{% endif %}
+					</div>
+				</div>
+			</div>
+		</nav> #}
+		<br />
+		{% with messages = get_flashed_messages(with_categories=true) %}
+			<!-- {% if messages %} -->
+				{% for category, message in messages %}
+					{% if category == 'error' %}
+						<div class="alert alert-danger alter-dismissable fade show" role="alert">
+							{{message}}
+						</div>
+					{% else %}
+						<div class="alert alert-success alter-dismissable fade show" role="alert">
+							{{message}}
+						</div>
+					{% endif %}
+				{% endfor %}
+			<!-- {% endif %} -->
+		{% endwith %}
+		{% block content %}
+		{% endblock %}
+		{% block admin%}
+		{% endblock %}
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+			crossorigin="anonymous">
+		</script>
+	</body>
 </html>
