modify to use the class rather than a tuple

--- a/webhost_app/website/templates/home.html.j2
+++ b/webhost_app/website/templates/home.html.j2
@@ -11,7 +11,7 @@
 		<div>
 			<h3>Current Pressure (within last 15 minutes):</h3>
 			<h2>{{current_pressure}} psi</h2>
-			<small class="text-muted">{{reading.timestamp}} UTC</small>
+			<small class="text-muted">{{reading.datetime}} UTC</small>
 		</div>
 	</div>
 	<div class="wrapper">
