getting docker stuff ready

--- a/webhost_app/website/templates/home.html.j2
+++ b/webhost_app/website/templates/home.html.j2
@@ -9,9 +9,9 @@
 		</div>
 		<br />
 		<div>
-			<h3>Current Pressure (within last 15 minutes):</h3>
+			<h3>Current Pressure:</h3>
 			<h2>{{current_pressure}} psi</h2>
-			<small class="text-muted">{{reading.datetime}} UTC</small>
+			<small class="text-muted">{{reading.datetime}}</small>
 		</div>
 	</div>
 	<div class="wrapper">
