--- a/webhost_app/website/templates/admin.html.j2
+++ b/webhost_app/website/templates/admin.html.j2
@@ -1,43 +1,44 @@
 {% extends "home.html.j2" %}
 {% block admin%}
-<hr />
-<h1>Admin Functions</h1>
-<br />
-<form method="post">
-	<hr />
-	<h3>Force a Reading Now</h3>
-	<div class="form-group">
-		<button
-			type="submit"
-			class="btn btn-primary"
-			name="submit_button"
-			value="forceReading">
-			Force Reading
-		</button>
-	</div>
-	<br />
-	<hr />
-	<h3>Take a Calibration Reading</h3>
-	<div class="form-group">
-		<label for="name">Current Pressure:</label>
-		<input
-			type="text"
-			class="form-control"
-			name="manualPressure"
-			id="manualPressure"
-			placeholder="Enter manually read pressure."
-		/>
-	</div>
-	<br />
-	<div class="form-group">
-		<button
-			type="submit"
-			class="btn btn-primary"
-			name="submit_button"
-			value="calibrateReading">
-			Calibration Reading
-		</button>
-	</div>
-	<br />
-</form>
+<div class="container">
+  <h1>Admin Functions</h1>
+  <br />
+  <form method="post">
+    <hr />
+    <h3>Force a Reading Now</h3>
+    <div class="form-group">
+      <button
+        type="submit"
+        class="btn btn-primary"
+        name="submit_button"
+        value="forceReading">
+        Force Reading
+      </button>
+    </div>
+    <br />
+    <hr />
+    <h3>Take a Calibration Reading</h3>
+    <div class="form-group">
+      <label for="name">Current Pressure:</label>
+      <input
+        type="text"
+        class="form-control"
+        name="manualPressure"
+        id="manualPressure"
+        placeholder="Enter manually read pressure."
+      />
+    </div>
+    <br />
+    <div class="form-group">
+      <button
+        type="submit"
+        class="btn btn-primary"
+        name="submit_button"
+        value="calibrateReading">
+        Calibration Reading
+      </button>
+    </div>
+    <br />
+  </form>
+</div>
 {% endblock %}
