--- a/webhost_app/website/templates/login.html.j2
+++ b/webhost_app/website/templates/login.html.j2
@@ -2,30 +2,32 @@
 
 {% block title %}Login Page{% endblock %}
 {% block content%}
-<form method="post">
-  <h3>Login</h3>
-  <div class="form-group">
-    <label for="email">Email Address:</label>
-    <input
-      type="email"
-      class="form-control"
-      name="email"
-      id="email"
-      placeholder="Enter Email Address"
-    />
-  </div>
-  <br />
-  <div class="form-group">
-    <label for="password">Password:</label>
-    <input
-      type="password"
-      class="form-control"
-      name="password"
-      id="password"
-      placeholder="Password"
-    />
-  </div>
-  <br />
-  <button type="submit" class="btn btn-primary">Login</button>
-</form>
+<div class="container">
+  <form method="post">
+    <h3>Login</h3>
+    <div class="form-group">
+      <label for="email">Email Address:</label>
+      <input
+        type="email"
+        class="form-control"
+        name="email"
+        id="email"
+        placeholder="Enter Email Address"
+      />
+    </div>
+    <br />
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        class="form-control"
+        name="password"
+        id="password"
+        placeholder="Password"
+      />
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+</div>
 {% endblock %}
