--- a/pi_app/templates/home.html.j2
+++ b/pi_app/templates/home.html.j2
@@ -46,7 +46,7 @@
         <div>
           <h3>Current Reading:</h3>
           <h2>{{current_pressure}} psi</h2>
-          <small class="text-muted">{{reading.timestamp}}</small>
+          <small class="text-muted">{{printable_timestamp}}</small>
         </div>
       </div>
     </div>
