Use local Timezone for display.

--- a/webhost_app/website/templates/home.html.j2
+++ b/webhost_app/website/templates/home.html.j2
@@ -11,7 +11,7 @@
     <div>
       <h3>Current Pressure:</h3>
       <h2>{{current_pressure}} psi</h2>
-      <small class="text-muted">{{reading.datetime}}</small>
+      <small class="text-muted">{{current_timestamp}}</small>
     </div>
   </div>
   <div class="wrapper">
